# android-ndk-rust

./: Cargo.toml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/mikelau/examplerust/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mikelau/examplerust/: MainActivity.kt  RustBridge.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/mikelau/examplerust/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: printer_util.rs
