[package]
name = "android-ndk-rust"
version = "0.1.0"
authors = ["Mike <mikeklintonlau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.16"
rand = "0.8"

[lib]
path = "src/printer_util.rs"
name = "examplerust_android"
crate-type = ["dylib"]